hopefully fixing overlap of map and fb

--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -166,7 +166,9 @@
         <div class="span4">
           <iframe src="https://mapsengine.google.com/map/embed?mid=z2e_3jYGktFU.kvMIujBcWI-A" width="640" height="480"></iframe>
         </div>
-        <div class="fb-like-box" data-href="https://www.facebook.com/DallasYMCATrot?fref=nf" data-width="250" data-height="250" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+        <div class="span4">
+            <div class="fb-like-box" data-href="https://www.facebook.com/DallasYMCATrot?fref=nf" data-width="250" data-height="250" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+        </div>
     </div>
     </div> <!-- End Container -->
 
