hopefully did not mess everything up

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -125,7 +125,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="/funruns/0">Custom Illustration</a>For an international add campaign.</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
@@ -135,7 +135,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="/funruns/1">Custom Illustration</a>For an international add campaign.</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
@@ -145,7 +145,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="/funruns/2">Custom Illustration</a>For an international add campaign.</span>
                     </li>
                 </ul>
             </div>
