--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -141,13 +141,15 @@ $(document).ready(function () {
         <!-- Headline Text
         ================================================== -->
         <div class="span4">
-          <h3>Fun Runs of America<br />
-            2015 Edition :D</h3>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam pretium vulputate magna sit amet blandit.</p>
-            <p>Cras rutrum, massa non blandit convallis, est lacus gravida enim, eu fermentum ligula orci et tortor. In sit amet nisl ac leo pulvinar molestie. Morbi blandit ultricies ultrices. Vivamus nec lectus sed orci molestie molestie. Etiam mattis neque eu orci rutrum aliquam.</p>
+          <h2>2015 Fun Runs of America</h2>
+            <p class="lead">Bored of your basic, boring 5K race? <br/><br/>We understand. You're looking for something a little more on the wild side. <br/><br/>Or maybe you're just itching to be covered in mud, carrying your wife, eating pizza, and baring it all when you run.<br/><br/></p>
+            <p class="lead" align="center"><strong>Itch no longer.</strong></p>
             <!-- <a href="#"><i class="icon-plus-sign"></i>Read More</a>  -->
         </div>
     </div><!-- End Headline -->
+    <div class="span12">
+      <p> Explanation about this site </p>
+    </div>
   
     <div class="row"><!-- Begin Bottom Section -->
   
