--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -167,6 +167,8 @@
         <div class="span12">
           <iframe src="https://mapsengine.google.com/map/embed?mid=z2e_3jYGktFU.kvMIujBcWI-A" width="640" height="480"></iframe>
         </div>
+    </div>
+    <div class="row">
         <div class="span4">
             <div class="fb-like-box" data-href="https://www.facebook.com/DallasYMCATrot?fref=nf" data-width="250" data-height="250" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
         </div>
