--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -165,7 +165,7 @@
 
     <div class="row">
         <div class="span12">
-          <iframe src="https://mapsengine.google.com/map/embed?mid=z2e_3jYGktFU.kvMIujBcWI-A" width="640" height="480"></iframe>
+          <iframe src="https://mapsengine.google.com/map/embed?mid=z2e_3jYGktFU.kvMIujBcWI-A" style="position: absolute; width: 75%; height: 40%; border: none"></iframe>
         </div>
     </div>
     <div class="row">
