--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -162,6 +162,12 @@
                 <div class="span4">
                     <div class="fb-like-box" data-href="https://www.facebook.com/DallasYMCATrot?fref=nf" data-width="250" data-height="250" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
                 </div>
+                <div class="span4">
+                    <div class="fb-like-box" data-href="https://www.facebook.com/events/1557631851152966/" data-width="250" data-height="250" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+                </div>
+                <div class="span4">
+                    <div class="fb-like-box" data-href="https://www.facebook.com/AChristmasStoryRun" data-width="250" data-height="250" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+                </div>
             </div>
 
             <!-- Pagination -->
