--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -133,7 +133,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="/funruns/0">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="/funruns/0">Wipeout Run</a>5k course with larger-than-life obstacles and elements inspired by the hit TV show Wipeout.</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
@@ -143,7 +143,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="/funruns/1">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="/funruns/1">Enjoy a 5K or 10K run from Higbee's to A Christmas Story House.</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
@@ -153,7 +153,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="/funruns/2">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="/funruns/2">Dallas Turkey Trot</a>The Turkey Trot is the largest Thanksgiving Day event of its kind.</span>
                     </li>
                 </ul>
             </div>
