fixed christmas story title

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -143,7 +143,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="/funruns/1">Enjoy a 5K or 10K run from Higbee's to A Christmas Story House.</span>
+                      <span class="project-details"><a href="/funruns/1">A Christmas Story Run</a>Enjoy a 5K or 10K run from Higbee's to A Christmas Story House.</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
