--- a/app/templates/themes.html
+++ b/app/templates/themes.html
@@ -114,7 +114,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Holiday</a>Races that celebrate a holiday.</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
@@ -124,7 +124,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Intense</a>Races that test your endurance.</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
@@ -134,7 +134,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Costume</a>Races where you get to dress up.</span>
                     </li>
                 </ul>
             </div>
