updating titles and descriptions for challenges

--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -114,7 +114,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Running On Odd Ground</a>Ice, Inflatable Balls, and Mud.</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
@@ -124,7 +124,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Running In A Costume</a>Mascot Costumes, Halloween Outfits, Tutus, Nude, and Banana Outfit.</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
@@ -134,7 +134,7 @@
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Running In Cold Weather</a>Snow, Ice, Freezing, and Temperatures.</span>
                     </li>
                 </ul>
             </div>
