Added the landing page photos

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -120,7 +120,7 @@
                         <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
                         <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2016<br/>
                         <i class="icon-gift"></i><strong>Birthday:</strong> April 27, 1993<br/>
-                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Prog Rock, Kpop<br/>
                         <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
                     </p>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="span4">
                     <div class="resize">
-                        <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
+                        <img src="{{ url_for('static', filename='img/teamMemberPics/Hector.jpg') }}" alt="image">
                     </div>
                     <h5>Hector Garcia</h5>
                     <p>
