--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -126,32 +126,38 @@
 
             <div class="row clearfix">
                 <ul class="gallery-post-grid holder">
-                    <!-- Gallery Item 1 -->
+                    <!-- Wipeout -->
                     <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
                       <a href="/funruns/0">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                          <img src="{{ url_for('static', filename='img/landing/wipeoutLanding.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="/funruns/0">Wipeout Run</a>5k course with larger-than-life obstacles and elements inspired by the hit TV show Wipeout.</span>
                     </li>
 
-                    <!-- Gallery Item 2 -->
+                    <!-- Christmas Story -->
                     <li  class="span4 gallery-item" data-id="id-2" data-type="illustration">
                       <a href="/funruns/1">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                          <img src="{{ url_for('static', filename='img/landing/christmasStoryRunLanding.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="/funruns/1">A Christmas Story Run</a>Enjoy a 5K or 10K run from Higbee's to A Christmas Story House.</span>
                     </li>
 
-                    <!-- Gallery Item 3 -->
+                    <!-- Dallas Turkey Trot -->
                     <li  class="span4 gallery-item" data-id="id-3" data-type="illustration">
                       <a href="/funruns/2">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                          <img src="{{ url_for('static', filename='img/landing/dallasTurkeyTrotLanding.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="/funruns/2">Dallas Turkey Trot</a>The Turkey Trot is the largest Thanksgiving Day event of its kind.</span>
                     </li>
