--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -153,12 +153,12 @@ $(document).ready(function () {
   
     <div class="row"><!-- Begin Bottom Section -->
   
-    <!-- Blog Preview
+    <!-- Group Preview
     ================================================== -->
     <div class="span6">
 
-      <h5 class="title-bg">What's good to put
-          <small> in this box?</small>
+      <h5 class="title-bg">Meet our
+          <small> bomb-diggity team!</small>
           <button id="btn-blog-next" class="btn btn-inverse btn-mini" type="button">&raquo;</button>
           <button id="btn-blog-prev" class="btn btn-inverse btn-mini" type="button">&laquo;</button>
       </h5>
@@ -170,9 +170,9 @@ $(document).ready(function () {
 
                <!-- Blog Item 1 -->
               <div class="active item">
-                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/gallery/blog-med-img-1.jpg') }}" alt="" class="align-left blog-thumb-preview" /></a>
+                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
                   <div class="post-info clearfix">
-                      <h4><a href="blog-single.htm">A subject that is beautiful in itself</a></h4>
+                      <h4><a href="blog-single.htm">Kurt Bixby</a></h4>
                       <ul class="blog-details-preview">
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
                           <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
@@ -180,14 +180,13 @@ $(document).ready(function () {
                           <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
                       </ul>
                   </div>
-                  <p class="blog-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum felis fermentum ipsum molestie sed porttitor ligula rutrum. Vestibulum lectus tellus, aliquet et iaculis sed, volutpat vel erat. <a href="#">Read more</a><p>
               </div>
 
               <!-- Blog Item 2 -->
                <div class="item">
-                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/gallery/blog-med-img-1.jpg') }}" alt="" class="align-left blog-thumb-preview" /></a>
+                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/Kevin.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
                   <div class="post-info clearfix">
-                      <h4><a href="blog-single.htm">A great artist is always before his time</a></h4>
+                      <h4><a href="blog-single.htm">Kevin Byers</a></h4>
                       <ul class="blog-details-preview">
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
                           <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
@@ -195,14 +194,13 @@ $(document).ready(function () {
                           <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
                       </ul>
                   </div>
-                  <p class="blog-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum felis fermentum ipsum molestie sed porttitor ligula rutrum. Vestibulum lectus tellus, aliquet et iaculis sed, volutpat vel erat. <a href="#">Read more</a><p>
               </div>
 
                <!-- Blog Item 3 -->
                <div class="item">
-                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/gallery/blog-med-img-1.jpg') }}" alt="" class="align-left blog-thumb-preview" /></a>
+                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/David.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
                   <div class="post-info clearfix">
-                      <h4><a href="blog-single.htm">Is art everything to anybody?</a></h4>
+                      <h4><a href="blog-single.htm">David Aguirre</a></h4>
                       <ul class="blog-details-preview">
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
                           <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
@@ -210,7 +208,48 @@ $(document).ready(function () {
                           <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
                       </ul>
                   </div>
-                  <p class="blog-summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum felis fermentum ipsum molestie sed porttitor ligula rutrum. Vestibulum lectus tellus, aliquet et iaculis sed, volutpat vel erat. <a href="#">Read more</a><p>
+              </div>
+
+                <!-- Blog Item 4 -->
+               <div class="item">
+                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/Edgar.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
+                  <div class="post-info clearfix">
+                      <h4><a href="blog-single.htm">Edgar Treto</a></h4>
+                      <ul class="blog-details-preview">
+                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
+                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
+                          <li><i class="icon-comment"></i><strong>Comments:</strong> <a href="#" title="Link">12</a><li>
+                          <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
+                      </ul>
+                  </div>
+              </div>
+
+              <!-- Blog Item 5 -->
+               <div class="item">
+                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/Hector.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
+                  <div class="post-info clearfix">
+                      <h4><a href="blog-single.htm">Hector Garcia</a></h4>
+                      <ul class="blog-details-preview">
+                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
+                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
+                          <li><i class="icon-comment"></i><strong>Comments:</strong> <a href="#" title="Link">12</a><li>
+                          <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
+                      </ul>
+                  </div>
+              </div>
+
+              <!-- Blog Item 6 -->
+               <div class="item">
+                  <a href="blog-single.htm"><img src="{{ url_for('static', filename='img/teamMemberPics/Alyssa.jpg') }}" alt="" class="align-left blog-thumb-preview" width=60%/></a>
+                  <div class="post-info clearfix">
+                      <h4><a href="blog-single.htm">Alyssa Williams</a></h4>
+                      <ul class="blog-details-preview">
+                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> Sept 4, 2015<li>
+                          <li><i class="icon-user"></i><strong>Posted by:</strong> <a href="#" title="Link">Admin</a><li>
+                          <li><i class="icon-comment"></i><strong>Comments:</strong> <a href="#" title="Link">12</a><li>
+                          <li><i class="icon-tags"></i> <a href="#">photoshop</a>, <a href="#">tutorials</a>, <a href="#">illustration</a>
+                      </ul>
+                  </div>
               </div>
               
           </div>
