Alyssa done for the night. Added a photo on front

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -129,11 +129,7 @@ $(document).ready(function () {
         <div class="span8">
           <div class="flexslider">
               <ul class="slides">
-                <li><a href="gallery-single.htm"><img src="{{ url_for('static', filename='img/gallery/AbbyArt.jpg') }}" alt="slider" /></a></li>
-                <li><a href="gallery-single.htm"><img src="{{ url_for('static', filename='img/gallery/AbbyArt.jpg') }}" alt="slider" /></a></li>
-                <li><a href="gallery-single.htm"><img src="{{ url_for('static', filename='img/gallery/AbbyArt.jpg') }}" alt="slider" /></a></li>
-                <li><a href="gallery-single.htm"><img src="{{ url_for('static', filename='img/gallery/AbbyArt.jpg') }}" alt="slider" /></a></li>
-                <li><a href="gallery-single.htm"><img src="{{ url_for('static', filename='img/gallery/AbbyArt.jpg') }}" alt="slider" /></a></li>
+                <li><a href="/funruns/2"><img src="{{ url_for('static', filename='img/indexCarousel/indexImg1.jpg') }}" alt="slider" /></a></li>
               </ul>
             </div>
         </div>
