added photos to themes, feel free to change actual photo

--- a/app/templates/themes.html
+++ b/app/templates/themes.html
@@ -112,7 +112,8 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                        <img src="{{ url_for('static', filename='img/themesPhotos/holiday1.jpg') }}" alt="Gallery">
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Holiday</a>Races that celebrate a holiday.</span>
                     </li>
@@ -122,7 +123,8 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                        <img src="{{ url_for('static', filename='img/themesPhotos/intense1.jpg') }}" alt="Gallery">
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Intense</a>Races that test your endurance.</span>
                     </li>
@@ -132,7 +134,8 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                        <img src="{{ url_for('static', filename='img/themesPhotos/costume1.jpg') }}" alt="Gallery">
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Costume</a>Races where you get to dress up.</span>
                     </li>
