hopefully fixed themes photos

--- a/app/templates/themes.html
+++ b/app/templates/themes.html
@@ -113,7 +113,8 @@
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="height: 300px; width: 370px; overflow: hidden">
-                        <img src="{{ url_for('static', filename='img/themesPhotos/holiday1.jpg') }}" alt="Gallery">
+                            <img src="{{ url_for('static', filename='img/themesPhotos/holiday1.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Holiday</a>Races that celebrate a holiday.</span>
                     </li>
@@ -124,7 +125,8 @@
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="height: 300px; width: 370px; overflow: hidden">
-                        <img src="{{ url_for('static', filename='img/themesPhotos/intense1.jpg') }}" alt="Gallery">
+                            <img src="{{ url_for('static', filename='img/themesPhotos/intense1.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Intense</a>Races that test your endurance.</span>
                     </li>
@@ -135,7 +137,8 @@
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="height: 300px; width: 370px; overflow: hidden">
-                        <img src="{{ url_for('static', filename='img/themesPhotos/costume1.jpg') }}" alt="Gallery">
+                            <img src="{{ url_for('static', filename='img/themesPhotos/costume1.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Costume</a>Races where you get to dress up.</span>
                     </li>
