Added photos to challenges page

--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -112,7 +112,9 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                            <img src="{{ url_for('static', filename='img/challengesPhotos/oddGround1.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Running On Odd Ground</a>Ice, Inflatable Balls, and Mud.</span>
                     </li>
@@ -122,7 +124,9 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                            <img src="{{ url_for('static', filename='img/challengesPhotos/costume1.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Running In A Costume</a>Mascot Costumes, Halloween Outfits, Tutus, Nude, and Banana Outfit.</span>
                     </li>
@@ -132,7 +136,9 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                            <img src="{{ url_for('static', filename='img/challengesPhotos/cold1.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Running In Cold Weather</a>Snow, Ice, Freezing, and Temperatures.</span>
                     </li>
