Shortened wipeout run label, so it does not use two lines

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -135,7 +135,7 @@
                           <img src="{{ url_for('static', filename='img/landing/wipeoutLanding.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="/funruns/0">Wipeout Run</a>5k course with larger-than-life obstacles and elements inspired by the hit TV show Wipeout.</span>
+                      <span class="project-details"><a href="/funruns/0">Wipeout Run</a>5k course inspired by the hit TV show Wipeout.</span>
                     </li>
 
                     <!-- Christmas Story -->
