--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -180,7 +180,16 @@
                         <img src="{{ url_for('static', filename='img/teamMemberPics/Edgar.jpg') }}" alt="image">
                     </div>
                     <h5>Edgar Treto</h5>
-                    <p>_(┐「ε:)_</p>
+                    <p>
+												<i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/"> Click Here</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:edgar.treto45@gmail.com"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
+                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
+                        <i class="icon-gift"></i><strong>Birthday:</strong> January 19, 1993<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Classical, DnB<br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Gaming, Soccer, Anime<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> _(┐「ε:)_<br/>
+										</p>
                 </div>
                 <div class="span4">
                     <div class="resize">
