Fixed e-mail for me

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -182,7 +182,7 @@
                     <h5>Edgar Treto</h5>
                     <p>
 												<i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/"> Click Here</a><br/>
-                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:edgar.treto45@gmail.com"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:edgar.treto45@gmail.com"> edgar.treto45@gmail.com</a><br/>
                         <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
                         <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
                         <i class="icon-gift"></i><strong>Birthday:</strong> January 19, 1993<br/>
