Updated pictures and descriptions for locations.

--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -112,9 +112,9 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <img src="{{ url_for('static', filename='img/cityPhotos/baltimoreMD.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Baltimore, Maryland</a>The Charm City.</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
@@ -122,9 +122,9 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <img src="{{ url_for('static', filename='img/cityPhotos/clevelandOH.jpg') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Cleveland, Ohio</a>The Forest City.</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
@@ -132,9 +132,9 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
+                        <img src="{{ url_for('static', filename='img/cityPhotos/dallasTX.png') }}" alt="Gallery">
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Custom Illustration</a>For an international add campaign.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Dallas, Texas</a>Home of the Cowboys.</span>
                     </li>
                 </ul>
             </div>
