--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -112,7 +112,9 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/cityPhotos/baltimoreMD.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                            <img src="{{ url_for('static', filename='img/cityPhotos/baltimoreMD.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Baltimore, Maryland</a>The Charm City.</span>
                     </li>
@@ -122,7 +124,9 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/cityPhotos/clevelandOH.jpg') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                            <img src="{{ url_for('static', filename='img/cityPhotos/clevelandOH.jpg') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Cleveland, Ohio</a>The Forest City.</span>
                     </li>
@@ -132,7 +136,9 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <img src="{{ url_for('static', filename='img/cityPhotos/dallasTX.png') }}" alt="Gallery">
+                        <div style="height: 300px; width: 370px; overflow: hidden">
+                            <img src="{{ url_for('static', filename='img/cityPhotos/dallasTX.png') }}" alt="Gallery">
+                        </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Dallas, Texas</a>Home of the Cowboys.</span>
                     </li>
