--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -113,7 +113,7 @@
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="height: 300px; width: 370px; overflow: hidden">
-                            <img src="{{ url_for('static', filename='img/cityPhotos/baltimoreMD.jpg') }}" alt="Gallery">
+                            <img src="{{ url_for('static', filename='img/landing/locations/baltimoreMD.jpg') }}" alt="Gallery">
                         </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Baltimore, Maryland</a>The Charm City.</span>
@@ -125,7 +125,7 @@
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="height: 300px; width: 370px; overflow: hidden">
-                            <img src="{{ url_for('static', filename='img/cityPhotos/clevelandOH.jpg') }}" alt="Gallery">
+                            <img src="{{ url_for('static', filename='img/landing/locations/clevelandOH.jpg') }}" alt="Gallery">
                         </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Cleveland, Ohio</a>The Forest City.</span>
@@ -137,7 +137,7 @@
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="height: 300px; width: 370px; overflow: hidden">
-                            <img src="{{ url_for('static', filename='img/cityPhotos/dallasTX.png') }}" alt="Gallery">
+                            <img src="{{ url_for('static', filename='img/landing/locations/dallasTX.png') }}" alt="Gallery">
                         </div>
                       </a>
                       <span class="project-details"><a href="gallery-single.htm">Dallas, Texas</a>Home of the Cowboys.</span>
