--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -135,7 +135,7 @@
                           <img src="{{ url_for('static', filename='img/landing/wipeoutLanding.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="/funruns/0">Wipeout Run</a>5k course inspired by the hit TV show Wipeout.</span>
+                      <span class="project-details"><a href="/funruns/0">Wipeout Run</a>5k course<br/>Try out the obstacles from the hit TV show "Wipeout"!</span>
                     </li>
 
                     <!-- Christmas Story -->
@@ -147,7 +147,7 @@
                           <img src="{{ url_for('static', filename='img/landing/christmasStoryRunLanding.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="/funruns/1">A Christmas Story Run</a>Enjoy a 5K or 10K run from Higbee's to A Christmas Story House.</span>
+                      <span class="project-details"><a href="/funruns/1">A Christmas Story Run</a>5K/10K course<br/>Experience the classic movie "A Christmas Story" in person.</span>
                     </li>
 
                     <!-- Dallas Turkey Trot -->
@@ -159,7 +159,7 @@
                           <img src="{{ url_for('static', filename='img/landing/dallasTurkeyTrotLanding.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="/funruns/2">Dallas Turkey Trot</a>The Turkey Trot is the largest Thanksgiving Day event of its kind.</span>
+                      <span class="project-details"><a href="/funruns/2">Dallas Turkey Trot</a>5K/8K course<br/>Run in the largest Thanksgiving Day event of its kind.</span>
                     </li>
                 </ul>
             </div>
