--- a/app/templates/funruntempl.html
+++ b/app/templates/funruntempl.html
@@ -41,9 +41,10 @@
       $interpolateProvider.endSymbol(']]');
   });
 
-  myApp.controller('FunRunGetter', function($scope, $http) {
+  myApp.controller('FunRunGetter', function($scope, $http, $sce) {
     $http.get("http://104.239.139.43:8000/api/funruns/" + {{runID}}).success(function(data) {
       $scope.run = data.funruns;
+      $scope.runURL = $scope.run.map_url;
       console.log($scope.run);
     });
   });
@@ -183,9 +184,9 @@ $(document).ready(function () {
             <h5 class="title-bg">Address</h5>
     
             <p class="quote-text side">[[run.address]]</p>
-            <iframe src= "https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12352.756020060675!2d-76.621608!3d39.283964!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2428d93f0397c539!2sOriole+Park+at+Camden+Yards!5e0!3m2!1sen!2sus!4v1427230426235" width="400" height="300" frameborder="0" style="border:0"></iframe>
-
-             <iframe ng-src= "[[run.maps_url]]" width="400" height="300" frameborder="0" style="border:0"></iframe>
+            <!-- <iframe src= "https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12352.756020060675!2d-76.621608!3d39.283964!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2428d93f0397c539!2sOriole+Park+at+Camden+Yards!5e0!3m2!1sen!2sus!4v1427230426235" width="400" height="300" frameborder="0" style="border:0"></iframe>
+ -->
+             <iframe ng-src= "[[runURL]]" width="400" height="300" frameborder="0" style="border:0"></iframe>
 
             <!--Tabbed Content-->
             <h5 class="title-bg">Involved Parties</h5>
